--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 704138502958219314
 textchannel = 704138502433931577
 ladderchannel = 
 jungsanchannel = 
