--- a/boss.ini
+++ b/boss.ini
@@ -17,7 +17,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 여왕개미
+bossname = 개미
 gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다
@@ -131,7 +131,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 베히모스
+bossname = 베히
 gentime = 09:00
 nogencheck = 0
 before_alert_ment = 입니다
@@ -197,13 +197,13 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 망각의거울
+bossname = 망각
 gentime = 11:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
 
-bossname = 히실로메
+bossname = 히실
 gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다
