--- a/boss.ini
+++ b/boss.ini
@@ -226,3 +226,15 @@ gentime = 72:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 어여오세요
+
+bossname = 사무엘
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
+
+bossname = 코룬
+gentime = 12:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 탐 입니다. 어여오세요
