--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 729672335799484543
 textchannel = 730034280876605492
 ladderchannel = 
 jungsanchannel = 
