--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 
-textchannel = 
+voicechannel = 730034280876605492
+textchannel = 729673021043900417
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
