--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 729672335799484543
-textchannel = 735401414989185075
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
