--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,15 +1,16 @@
 timezone = 9
 
-voicechannel = 729673000680554529
-textchannel = 730034280876605492
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
 racingchannel = 
+itemchannel = 
 
 before_alert = 1
 before_alert1 = 5
-mungChk = 5
+mungChk = 10
 delmungcnt = 20
 
 bossInfoNum = 3
