--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 
-textchannel = 
+voicechannel = 729673000680554529
+textchannel = 730034280876605492
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
