--- a/boss.ini
+++ b/boss.ini
@@ -1,282 +1,282 @@
-ï»¿ï»¿-----ì¼ë°˜ë³´ìŠ¤-----
-bossname = ì²´ë¥´íˆ¬ë°”
+?-----ÀÏ¹İº¸½º-----
+bossname = Ã¼¸£Åõ¹ÙA
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ì²´ë¥´íˆ¬ë°”ì˜ ë§‰ì‚¬ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Ã¼¸£Åõ¹ÙÀÇ ¸·»ç·Î ¿À¼¼¿ä
 
-bossname = ë°”ì‹¤ë¼
+bossname = ¹Ù½Ç¶óB
 gentime = 04:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í™©ë¬´ì§€ ë‚¨ë¶€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. È²¹«Áö ³²ºÎ·Î ¿À¼¼¿ä
 
-bossname = ì¼ˆì†ŒìŠ¤
+bossname = ÄÌ¼Ò½ºC
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ì ˆë§ì˜ íí—ˆë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Àı¸ÁÀÇ ÆóÇã·Î ¿À¼¼¿ä
 
-bossname = ê°œë¯¸
+bossname = °³¹ÌB
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ê°œë¯¸êµ´ 3ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. °³¹Ì±¼ 3ÃşÀ¸·Î ¿À¼¼¿ä
 
-bossname = ì‚¬ë°˜
+bossname = »ç¹İB
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ê°œë¯¸êµ´ 2ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. °³¹Ì±¼ 2ÃşÀ¸·Î ¿À¼¼¿ä
 
-bossname = í ë¦¬ìŠ¤
+bossname = Æç¸®½ºB
 gentime = 03:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë¹„í•˜ì´ë¸Œë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ºñÇÏÀÌºê·Î ¿À¼¼¿ä
 
-bossname = í…œí˜ìŠ¤íŠ¸
+bossname = ÅÛÆä½ºÆ®A
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ì‹œì²´ ì²˜ë¦¬ì†Œë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ½ÃÃ¼ Ã³¸®¼Ò·Î ¿À¼¼¿ä
 
-bossname = ì—”ì¿ ë¼
+bossname = ¿£Äí¶óB
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë””ì˜¨ ëª©ì´ˆì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. µğ¿Â ¸ñÃÊÁö·Î ¿À¼¼¿ä
 
-bossname = íƒˆë¼í‚¨
+bossname = Å»¶óÅ²B
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë°˜ë€êµ°ì˜ ì•„ì§€íŠ¸ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ¹İ¶õ±ºÀÇ ¾ÆÁöÆ®·Î ¿À¼¼¿ä
 
-bossname = ì‚¬ë¥´ì¹´
+bossname = »ç¸£Ä«A
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë¸ë£¨ ë¦¬ìë“œë§¨ ì„œì‹ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. µ¨·ç ¸®ÀÚµå¸Ç ¼­½ÄÁö·Î ¿À¼¼¿ä
 
-bossname = íŒë“œ
+bossname = ÆÇµåC
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë””ì˜¨ êµ¬ë¦‰ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. µğ¿Â ±¸¸ªÁö·Î ¿À¼¼¿ä
 
-bossname = ìŠ¤íƒ„
+bossname = ½ºÅºB
 gentime = 07:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ê±°ì¸ì˜ í”ì ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. °ÅÀÎÀÇ ÈçÀûÀ¸·Î ¿À¼¼¿ä
 
-bossname = í¬ë£¨ë§ˆ
+bossname = Å©·ç¸¶C
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ë£¨ë§ˆ ìŠµì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Å©·ç¸¶ ½ÀÁö·Î ¿À¼¼¿ä
 
-bossname = í‹°ë¯¸íŠ¸ë¦¬ìŠ¤
+bossname = Æ¼¹ÌÆ®¸®½ºA
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í”Œë¡œë€ ê°œê°„ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ÇÃ·Î¶õ °³°£Áö·Î ¿À¼¼¿ä
 
-bossname = ì˜¤í¬
+bossname = ¿ÀÅ©A
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ë£¨ë§ˆíƒ‘ 3ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Å©·ç¸¶Å¾ 3ÃşÀ¸·Î ¿À¼¼¿ä
 
-bossname = ì¹´íƒ„
+bossname = Ä«ÅºC
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ë£¨ë§ˆíƒ‘ 6ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Å©·ç¸¶Å¾ 6ÃşÀ¸·Î ¿À¼¼¿ä
 
-bossname = ì½”ì–´
+bossname = ÄÚ¾îB
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ë£¨ë§ˆíƒ‘ 7ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Å©·ç¸¶Å¾ 7ÃşÀ¸·Î ¿À¼¼¿ä
 
-bossname = ë¦´ë¦¬
+bossname = ¸±¸®C
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ì£½ìŒì˜ íšŒë‘ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Á×À½ÀÇ È¸¶ûÀ¸·Î ¿À¼¼¿ä
 
-bossname = ë©”ë‘ì‚¬
+bossname = ¸ŞµÎ»çB
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë©”ë‘ì‚¬ì˜ ì •ì›ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ¸ŞµÎ»çÀÇ Á¤¿øÀ¸·Î ¿À¼¼¿ä
 
-bossname = íŒë‚˜
+bossname = ÆÇ³ªB
 gentime = 05:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ê³ ë¥´ê³¤ í™”ì›ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. °í¸£°ï È­¿øÀ¸·Î ¿À¼¼¿ä
 
-bossname = ë§ˆíˆ¬ë¼
+bossname = ¸¶Åõ¶óA
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ì•½íƒˆìì˜ ì•¼ì˜ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ¾àÅ»ÀÚÀÇ ¾ß¿µÁö·Î ¿À¼¼¿ä
 
-bossname = ë¸Œë˜ì¹´
+bossname = ºê·¡Ä«C
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë¸Œë˜ì¹´ ì†Œêµ´ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ºê·¡Ä« ¼Ò±¼·Î ¿À¼¼¿ä
 
-bossname = ë² íˆ
+bossname = º£È÷C
 gentime = 09:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ìš©ì˜ ê³„ê³¡ ë¶ë¶€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ¿ëÀÇ °è°î ºÏºÎ·Î ¿À¼¼¿ä
 
-bossname = ë“œë¹„
+bossname = µåºñA
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ì•ˆíƒ€ë¼ìŠ¤ì˜ ë™êµ´ 6ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ¾ÈÅ¸¶ó½ºÀÇ µ¿±¼ 6ÃşÀ¸·Î ¿À¼¼¿ä
 
-bossname = íƒˆí‚¨
+bossname = Å»Å²C
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë ˆí†  ë¦¬ìë“œë§¨ ë¶€ë½ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ·¹Åä ¸®ÀÚµå¸Ç ºÎ¶ôÀ¸·Î ¿À¼¼¿ä
 
-bossname = ì…€ë£¨
+bossname = ¼¿·çB
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. íŒŒì•„ê·¸ë¦¬ì˜¤ì˜ ì œë‹¨ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ÆÄ¾Æ±×¸®¿ÀÀÇ Á¦´ÜÀ¸·Î ¿À¼¼¿ä
 
-bossname = ë°œë³´
+bossname = ¹ßº¸A
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ì‚°ì  ì‚°ì±„ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. »êÀû »êÃ¤·Î ¿À¼¼¿ä
 
-bossname = í‹°ë¯¸ë‹ˆì—˜
+bossname = Æ¼¹Ì´Ï¿¤A
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í‹°ë¯¸ë‹ˆì—˜ì˜ ë³´ê¸ˆìë¦¬ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Æ¼¹Ì´Ï¿¤ÀÇ º¸±İÀÚ¸®·Î ¿À¼¼¿ä
 
-bossname = ë ˆí”¼ë¡œ
+bossname = ·¹ÇÇ·ÎC
 gentime = 07:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ì í™•ì‚°ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Æ÷ÀÚ È®»êÁö·Î ¿À¼¼¿ä
 
-bossname = ì˜¤ë¥´íœ
+bossname = ¿À¸£Ææ
 gentime = 24:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ì í™•ì‚°ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Æ÷ÀÚ È®»êÁö·Î ¿À¼¼¿ä
 
-bossname = ê°€ë ˆìŠ¤
+bossname = °¡·¹½ºA
 gentime = 09:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. íƒ€ë…¸ë¥´ í˜‘ê³¡ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. Å¸³ë¸£ Çù°îÀ¸·Î ¿À¼¼¿ä
 
-bossname = íŠ¸ë¡¬ë°”
+bossname = Æ®·Ò¹ÙC
 gentime = 07:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í”¼ì˜ ëŠªì§€ëŒ€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ÇÇÀÇ ´ËÁö´ë·Î ¿À¼¼¿ä
 
-bossname = ë§ê°
+bossname = ¸Á°¢A
 gentime = 11:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ê±°ìš¸ì˜ ìˆ²ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. °Å¿ïÀÇ ½£À¸·Î ¿À¼¼¿ä
 
-bossname = íˆì‹¤
+bossname = È÷½ÇB
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ê²©ì „ì˜ í‰ì›ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. °İÀüÀÇ Æò¿øÀ¸·Î ¿À¼¼¿ä
 
-bossname = ë€ë„ë¥´
+bossname = ¶õµµ¸£C
 gentime = 09:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë§ê°ì˜ í‰ì›ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ¸Á°¢ÀÇ Æò¿øÀ¸·Î ¿À¼¼¿ä
 
-bossname = ê¸€ë¼í‚¤
+bossname = ±Û¶óÅ°A
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ê³ ìš”í•œ ë¶„ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. °í¿äÇÑ ºĞÁö·Î ¿À¼¼¿ä
 
-bossname = ì˜¬í¬ìŠ¤
+bossname = ¿ÃÅ©½º
 gentime = 24:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ê³ ìš”í•œ ë¶„ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. °í¿äÇÑ ºĞÁö·Î ¿À¼¼¿ä
 
-bossname = ì½”ë£¬
+bossname = ÄÚ·éB
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ìƒì•„íƒ‘ 2ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. »ó¾ÆÅ¾ 2ÃşÀ¸·Î ¿À¼¼¿ä
 
-bossname = ì‚¬ë¬´ì—˜
+bossname = »ç¹«¿¤A
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ìƒì•„íƒ‘ 3ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. »ó¾ÆÅ¾ 3ÃşÀ¸·Î ¿À¼¼¿ä
 
-bossname = ë…¸ë¥´ë¬´ìŠ¤
+bossname = ³ë¸£¹«½º
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ëŒ€ì§€ì˜ ì œë‹¨ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ´ëÁöÀÇ Á¦´ÜÀ¸·Î ¿À¼¼¿ä
 
-bossname = ìš°ì¹¸ë°”
+bossname = ¿ìÄ­¹Ù
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë¬¼ì˜ ì œë‹¨ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ¹°ÀÇ Á¦´ÜÀ¸·Î ¿À¼¼¿ä
 
-bossname = ì‹¤ë¼
+bossname = ½Ç¶ó
 gentime = 04:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ë°”ëŒì˜ ì œë‹¨ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ¹Ù¶÷ÀÇ Á¦´ÜÀ¸·Î ¿À¼¼¿ä
 
-bossname = ë¬´í”„
+bossname = ¹«ÇÁ
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ì–´ë‘ ì˜ ì œë‹¨ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ¾îµÒÀÇ Á¦´ÜÀ¸·Î ¿À¼¼¿ä
 
-bossname = ì¹´ë¸Œë¦¬ì˜¤
+bossname = Ä«ºê¸®¿ÀC
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. êµ­ë¦½ ë¬˜ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ±¹¸³ ¹¦Áö·Î ¿À¼¼¿ä
 
-bossname = í”Œë¦°íŠ¸
+bossname = ÇÃ¸°Æ®C
 gentime = 05:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. êµ­ë¦½ ë¬˜ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ±¹¸³ ¹¦Áö·Î ¿À¼¼¿ä
 
-bossname = í•˜í”„
+bossname = ÇÏÇÁ
 gentime = 20:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. ì‹¤ë Œì˜ ë´‰ì¸ìœ¼ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ½Ç·»ÀÇ ºÀÀÎÀ¸·Î ¿À¼¼¿ä
 
-bossname = ì•ˆë“œë¼ìŠ¤
+bossname = ¾Èµå¶ó½ºB
 gentime = 15:00
 nogencheck = 0
-before_alert_ment = ì…ë‹ˆë‹¤
-alert_ment = íƒ ì…ë‹ˆë‹¤. í•™ì‚´ì˜ ëŒ€ì§€ë¡œ ì˜¤ì„¸ìš”
+before_alert_ment = ÀÔ´Ï´Ù
+alert_ment = Å½ ÀÔ´Ï´Ù. ÇĞ»ìÀÇ ´ëÁö·Î ¿À¼¼¿ä
