--- a/boss.ini
+++ b/boss.ini
@@ -1,282 +1,282 @@
-?-----ÀÏ¹İº¸½º-----
-bossname = Ã¼¸£Åõ¹ÙA
+ï»¿ï»¿-----ì¼ë°˜ë³´ìŠ¤-----
+bossname = ì²´ë¥´íˆ¬ë°”
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Ã¼¸£Åõ¹ÙÀÇ ¸·»ç·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ì²´ë¥´íˆ¬ë°”ì˜ ë§‰ì‚¬ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¹Ù½Ç¶óB
+bossname = ë°”ì‹¤ë¼
 gentime = 04:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. È²¹«Áö ³²ºÎ·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í™©ë¬´ì§€ ë‚¨ë¶€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ÄÌ¼Ò½ºC
+bossname = ì¼ˆì†ŒìŠ¤
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Àı¸ÁÀÇ ÆóÇã·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ì ˆë§ì˜ íí—ˆë¡œ ì˜¤ì„¸ìš”
 
-bossname = °³¹ÌB
+bossname = ê°œë¯¸
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. °³¹Ì±¼ 3ÃşÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ê°œë¯¸êµ´ 3ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = »ç¹İB
+bossname = ì‚¬ë°˜
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. °³¹Ì±¼ 2ÃşÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ê°œë¯¸êµ´ 2ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = Æç¸®½ºB
+bossname = í ë¦¬ìŠ¤
 gentime = 03:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ºñÇÏÀÌºê·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë¹„í•˜ì´ë¸Œë¡œ ì˜¤ì„¸ìš”
 
-bossname = ÅÛÆä½ºÆ®A
+bossname = í…œí˜ìŠ¤íŠ¸
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ½ÃÃ¼ Ã³¸®¼Ò·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ì‹œì²´ ì²˜ë¦¬ì†Œë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¿£Äí¶óB
+bossname = ì—”ì¿ ë¼
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. µğ¿Â ¸ñÃÊÁö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë””ì˜¨ ëª©ì´ˆì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = Å»¶óÅ²B
+bossname = íƒˆë¼í‚¨
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ¹İ¶õ±ºÀÇ ¾ÆÁöÆ®·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë°˜ë€êµ°ì˜ ì•„ì§€íŠ¸ë¡œ ì˜¤ì„¸ìš”
 
-bossname = »ç¸£Ä«A
+bossname = ì‚¬ë¥´ì¹´
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. µ¨·ç ¸®ÀÚµå¸Ç ¼­½ÄÁö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë¸ë£¨ ë¦¬ìë“œë§¨ ì„œì‹ì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ÆÇµåC
+bossname = íŒë“œ
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. µğ¿Â ±¸¸ªÁö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë””ì˜¨ êµ¬ë¦‰ì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ½ºÅºB
+bossname = ìŠ¤íƒ„
 gentime = 07:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. °ÅÀÎÀÇ ÈçÀûÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ê±°ì¸ì˜ í”ì ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = Å©·ç¸¶C
+bossname = í¬ë£¨ë§ˆ
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Å©·ç¸¶ ½ÀÁö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ë£¨ë§ˆ ìŠµì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = Æ¼¹ÌÆ®¸®½ºA
+bossname = í‹°ë¯¸íŠ¸ë¦¬ìŠ¤
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ÇÃ·Î¶õ °³°£Áö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í”Œë¡œë€ ê°œê°„ì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¿ÀÅ©A
+bossname = ì˜¤í¬
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Å©·ç¸¶Å¾ 3ÃşÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ë£¨ë§ˆíƒ‘ 3ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = Ä«ÅºC
+bossname = ì¹´íƒ„
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Å©·ç¸¶Å¾ 6ÃşÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ë£¨ë§ˆíƒ‘ 6ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ÄÚ¾îB
+bossname = ì½”ì–´
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Å©·ç¸¶Å¾ 7ÃşÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ë£¨ë§ˆíƒ‘ 7ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¸±¸®C
+bossname = ë¦´ë¦¬
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Á×À½ÀÇ È¸¶ûÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ì£½ìŒì˜ íšŒë‘ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¸ŞµÎ»çB
+bossname = ë©”ë‘ì‚¬
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ¸ŞµÎ»çÀÇ Á¤¿øÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë©”ë‘ì‚¬ì˜ ì •ì›ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ÆÇ³ªB
+bossname = íŒë‚˜
 gentime = 05:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. °í¸£°ï È­¿øÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ê³ ë¥´ê³¤ í™”ì›ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¸¶Åõ¶óA
+bossname = ë§ˆíˆ¬ë¼
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ¾àÅ»ÀÚÀÇ ¾ß¿µÁö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ì•½íƒˆìì˜ ì•¼ì˜ì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ºê·¡Ä«C
+bossname = ë¸Œë˜ì¹´
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ºê·¡Ä« ¼Ò±¼·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë¸Œë˜ì¹´ ì†Œêµ´ë¡œ ì˜¤ì„¸ìš”
 
-bossname = º£È÷C
+bossname = ë² íˆ
 gentime = 09:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ¿ëÀÇ °è°î ºÏºÎ·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ìš©ì˜ ê³„ê³¡ ë¶ë¶€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = µåºñA
+bossname = ë“œë¹„
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ¾ÈÅ¸¶ó½ºÀÇ µ¿±¼ 6ÃşÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ì•ˆíƒ€ë¼ìŠ¤ì˜ ë™êµ´ 6ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = Å»Å²C
+bossname = íƒˆí‚¨
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ·¹Åä ¸®ÀÚµå¸Ç ºÎ¶ôÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë ˆí†  ë¦¬ìë“œë§¨ ë¶€ë½ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¼¿·çB
+bossname = ì…€ë£¨
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ÆÄ¾Æ±×¸®¿ÀÀÇ Á¦´ÜÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. íŒŒì•„ê·¸ë¦¬ì˜¤ì˜ ì œë‹¨ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¹ßº¸A
+bossname = ë°œë³´
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. »êÀû »êÃ¤·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ì‚°ì  ì‚°ì±„ë¡œ ì˜¤ì„¸ìš”
 
-bossname = Æ¼¹Ì´Ï¿¤A
+bossname = í‹°ë¯¸ë‹ˆì—˜
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Æ¼¹Ì´Ï¿¤ÀÇ º¸±İÀÚ¸®·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í‹°ë¯¸ë‹ˆì—˜ì˜ ë³´ê¸ˆìë¦¬ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ·¹ÇÇ·ÎC
+bossname = ë ˆí”¼ë¡œ
 gentime = 07:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Æ÷ÀÚ È®»êÁö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ì í™•ì‚°ì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¿À¸£Ææ
+bossname = ì˜¤ë¥´íœ
 gentime = 24:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Æ÷ÀÚ È®»êÁö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í¬ì í™•ì‚°ì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = °¡·¹½ºA
+bossname = ê°€ë ˆìŠ¤
 gentime = 09:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. Å¸³ë¸£ Çù°îÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. íƒ€ë…¸ë¥´ í˜‘ê³¡ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = Æ®·Ò¹ÙC
+bossname = íŠ¸ë¡¬ë°”
 gentime = 07:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ÇÇÀÇ ´ËÁö´ë·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í”¼ì˜ ëŠªì§€ëŒ€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¸Á°¢A
+bossname = ë§ê°
 gentime = 11:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. °Å¿ïÀÇ ½£À¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ê±°ìš¸ì˜ ìˆ²ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = È÷½ÇB
+bossname = íˆì‹¤
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. °İÀüÀÇ Æò¿øÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ê²©ì „ì˜ í‰ì›ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¶õµµ¸£C
+bossname = ë€ë„ë¥´
 gentime = 09:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ¸Á°¢ÀÇ Æò¿øÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë§ê°ì˜ í‰ì›ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ±Û¶óÅ°A
+bossname = ê¸€ë¼í‚¤
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. °í¿äÇÑ ºĞÁö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ê³ ìš”í•œ ë¶„ì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¿ÃÅ©½º
+bossname = ì˜¬í¬ìŠ¤
 gentime = 24:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. °í¿äÇÑ ºĞÁö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ê³ ìš”í•œ ë¶„ì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ÄÚ·éB
+bossname = ì½”ë£¬
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. »ó¾ÆÅ¾ 2ÃşÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ìƒì•„íƒ‘ 2ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = »ç¹«¿¤A
+bossname = ì‚¬ë¬´ì—˜
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. »ó¾ÆÅ¾ 3ÃşÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ìƒì•„íƒ‘ 3ì¸µìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ³ë¸£¹«½º
+bossname = ë…¸ë¥´ë¬´ìŠ¤
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ´ëÁöÀÇ Á¦´ÜÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ëŒ€ì§€ì˜ ì œë‹¨ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¿ìÄ­¹Ù
+bossname = ìš°ì¹¸ë°”
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ¹°ÀÇ Á¦´ÜÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë¬¼ì˜ ì œë‹¨ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ½Ç¶ó
+bossname = ì‹¤ë¼
 gentime = 04:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ¹Ù¶÷ÀÇ Á¦´ÜÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ë°”ëŒì˜ ì œë‹¨ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¹«ÇÁ
+bossname = ë¬´í”„
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ¾îµÒÀÇ Á¦´ÜÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ì–´ë‘ ì˜ ì œë‹¨ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = Ä«ºê¸®¿ÀC
+bossname = ì¹´ë¸Œë¦¬ì˜¤
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ±¹¸³ ¹¦Áö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. êµ­ë¦½ ë¬˜ì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ÇÃ¸°Æ®C
+bossname = í”Œë¦°íŠ¸
 gentime = 05:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ±¹¸³ ¹¦Áö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. êµ­ë¦½ ë¬˜ì§€ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ÇÏÇÁ
+bossname = í•˜í”„
 gentime = 20:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ½Ç·»ÀÇ ºÀÀÎÀ¸·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. ì‹¤ë Œì˜ ë´‰ì¸ìœ¼ë¡œ ì˜¤ì„¸ìš”
 
-bossname = ¾Èµå¶ó½ºB
+bossname = ì•ˆë“œë¼ìŠ¤
 gentime = 15:00
 nogencheck = 0
-before_alert_ment = ÀÔ´Ï´Ù
-alert_ment = Å½ ÀÔ´Ï´Ù. ÇĞ»ìÀÇ ´ëÁö·Î ¿À¼¼¿ä
+before_alert_ment = ì…ë‹ˆë‹¤
+alert_ment = íƒ ì…ë‹ˆë‹¤. í•™ì‚´ì˜ ëŒ€ì§€ë¡œ ì˜¤ì„¸ìš”
